--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ session = ["actix-session"]
 [dependencies]
 actix-web = { version = "4", features = ["compat", "secure-cookies"] }
 actix-session = { version = "0.10", optional = true, features = ["cookie-session"] }
+actix-http = "3.10"
 base64 = "0.22.1"
 futures-util = "0.3.31"
 rand = "0.9.1"
