--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ actix-http = "3.10"
 base64 = "0.22.1"
 futures-util = "0.3.31"
 rand = "0.9.1"
+sha2 = "0.10"
+hmac = "0.12"
+hex = "0.4.3"
 serde_json = "1.0.140"
 serde_urlencoded = "0.7.1"
 log = "0.4.27"
@@ -25,9 +28,13 @@ criterion = "0.5"
 actix-rt = "2.10"
 
 [[bench]]
-name = "token"
+name = "http"
 harness = false
 
 [[bench]]
-name = "http"
+name = "hmac_token"
+harness = false
+
+[[bench]]
+name = "csrf_token"
 harness = false
