FIX: Simplify CI pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,5 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
 
-      - name: Test Default
-        run: cargo test
-
-      - name: Test Session Feature
-        run: cargo test --features "session"
+      - name: Run Tests
+        run: cargo test --all-features
