--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "actix-csrf-middleware"
-version = "0.2.1"
+version = "0.3.0"
 edition = "2024"
+license = "MIT"
+authors = ["Andrew <zeek@tuta.com>"]
+repository = "https://github.com/yoozzeek/actix-csrf-middleware"
+keywords = ["security", "csrf", "web", "middleware", "actix-web"]
 
 [lib]
 crate-type = ["rlib"]
